# d3

./: .gitignore  .ignore  .rustfmt.toml  Cargo.toml  Makefile  gleam.toml  index.html
apps/d3/: Cargo.toml
apps/d3/src/: app.rs  args.rs  bounding_box.rs  bounds.rs  buffer.rs  camera.rs  light.rs  main.rs  material.rs  normal_renderer.rs  object.rs  reflection.rs  render.rs  render1.rs  render2.rs  renderer.rs  scene.rs  shading.rs  test_triangle.rs  tile.rs  tiled.rs  util.rs  varying.rs
gleam/: index.html  manifest.toml
gleam/src/: glue.mjs  p5.gleam
gleam/test/: matrix_test.gleam
libs/array/: Cargo.toml
libs/matrix/: Cargo.toml
libs/render/: Cargo.toml
libs/transform/: Cargo.toml
models/: ball.blend  torus-smooth.blend
objects/alpha/: alpha.blend  alpha.mtl
objects/ball/: ball.mtl
objects/colors/: colors.blend  colors.mtl
objects/dice/: dice.mtl
objects/sponza/: sponza.mtl
objects/torus/: torus-flat.blend  torus-flat.mtl  torus-smooth.blend  torus-smooth.mtl
objs/: ball.mtl  dice.blend  nefertiti.mtl  torus-flat.mtl
pkgs/array/: Cargo.toml
pkgs/d3/: Cargo.toml
pkgs/matrix/: Cargo.toml
pkgs/transform/: Cargo.toml
rust/: .gitignore  Cargo.toml
scenes/: alpha.toml  ball.toml  colors.toml  cube.toml  dice.toml  nefertiti.toml  scene1.toml  sponza.toml  torus-flat.toml  torus-smooth.toml  tris.toml
src/: app.rs  camera.rs  cli.rs  d3.gleam  glue.mjs  main.rs  matrix.gleam  mesh.rs  obj.gleam  object.rs  objects.gleam  p5.gleam  render.gleam  transform.rs  v3.gleam
test/: d3_test.gleam  matrix_test.gleam  render_test.gleam
(+81 files in other folders)
