[package]
name = "d3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
array = { version = "0.1.0", path = "../../libs/array" }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
image = { version = "0.25.5", default-features = false, features = ["png"] }
log = "0.4.22"
matrix = { version = "0.1.0", path = "../../libs/matrix" }
num = "0.4.3"
obj = { version = "0.1.0", path = "../../libs/obj" }
pixels = "0.14.0"
render = { version = "0.1.0", path = "../../libs/render" }
toml = "0.8.19"
transform = { version = "0.1.0", path = "../../libs/transform" }
winit = { version = "0.30.5", default-features = false, features = ["rwh_05", "rwh_06"] }
